RESOLVED FIXED99833
[BlackBerry] Don't attempt to auto scroll on input for Fixed Position elements.
https://bugs.webkit.org/show_bug.cgi?id=99833
Summary [BlackBerry] Don't attempt to auto scroll on input for Fixed Position elements.
Mike Fenton
Reported 2012-10-19 06:04:55 PDT
SSIA.
Attachments
Patch (4.44 KB, patch)
2012-10-19 06:13 PDT, Mike Fenton
tonikitoo: review+
webkit.review.bot: commit-queue-
Patch with Reviewer added manually. (4.44 KB, patch)
2012-10-19 07:05 PDT, Mike Fenton
no flags
Mike Fenton
Comment 1 2012-10-19 06:13:00 PDT
WebKit Review Bot
Comment 2 2012-10-19 06:23:09 PDT
Comment on attachment 169607 [details] Patch Rejecting attachment 169607 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/JavaScriptCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/14458469
WebKit Review Bot
Comment 3 2012-10-19 06:58:17 PDT
Comment on attachment 169607 [details] Patch Rejecting attachment 169607 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/JavaScriptCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/14459492
Mike Fenton
Comment 4 2012-10-19 07:05:01 PDT
Created attachment 169615 [details] Patch with Reviewer added manually.
WebKit Review Bot
Comment 5 2012-10-19 07:06:50 PDT
Comment on attachment 169615 [details] Patch with Reviewer added manually. Rejecting attachment 169615 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/JavaScriptCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/14461453
WebKit Review Bot
Comment 6 2012-10-19 10:08:36 PDT
Comment on attachment 169615 [details] Patch with Reviewer added manually. Clearing flags on attachment: 169615 Committed r131912: <http://trac.webkit.org/changeset/131912>
WebKit Review Bot
Comment 7 2012-10-19 10:08:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.