[BlackBerry] Don't attempt to auto scroll on input for Fixed Position elements. https://bugs.webkit.org/show_bug.cgi?id=99833

Reviewed by Antonio Gomes.

PR 195024.

Don't attempt to scroll fixed position elements.

Reviewed Internally by Arvid Nilsson.

* WebKitSupport/DOMSupport.cpp:
(BlackBerry::WebKit::DOMSupport::isFixedPositionOrHasFixedPositionAncestor):
(DOMSupport):
* WebKitSupport/DOMSupport.h:
(WebCore):
* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::ensureFocusTextElementVisible):


Canonical link: https://commits.webkit.org/117848@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131912 268f45cc-cd09-0410-ab3c-d52691b4dbfc